Clean-up: ACCESS_GET_CONTENT_TYPE instead of psz_demux override
Some access plugins override their psz_demux member. This is ugly.
Instead, they should return a correct content type via the control request. In turn, the input core should match the content type to a demuxer name.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::Core: Input Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Core: Input Severity::normal Type::bug Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %Bugs paradize
changed milestone to %Bugs paradize
- Rémi Denis-Courmont unassigned @fenrir
unassigned @fenrir
commit a43798f3 Author: Edward Wang edward.c.wang@compdigitec.com Date: Sun Oct 27 00:39:25 2013 -0400
http: remove unneeded xspf hack Ref [#8449](https://code.videolan.org/videolan/vlc/-/issues/8449) Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>
Original author: edward.c.wang@compdigitec.com
commit e58236de Author: Edward Wang edward.c.wang@compdigitec.com Date: Sun Oct 27 00:39:24 2013 -0400
dvb: remove psz_demux hack Ref [#8449](https://code.videolan.org/videolan/vlc/-/issues/8449) Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>
Original author: edward.c.wang@compdigitec.com
commit 39faaf58 Author: Edward Wang edward.c.wang@compdigitec.com Date: Sun Oct 27 00:39:23 2013 -0400
directory: add support for ACCESS_GET_CONTENT_TYPE Remove the psz_demux hack. Ref [#8449](https://code.videolan.org/videolan/vlc/-/issues/8449) Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>
Original author: edward.c.wang@compdigitec.com
- Rémi Denis-Courmont assigned to @Courmisch
assigned to @Courmisch
- Author Maintainer
Fixed in 1965d962
- Rémi Denis-Courmont changed milestone to %3.0.0
changed milestone to %3.0.0
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed
- Owner
Milestone renamed
- Jean-Baptiste Kempf changed milestone to %3.0 FF
changed milestone to %3.0 FF
- Owner
Milestone renamed