directory: add support for ACCESS_GET_CONTENT_TYPE

Remove the psz_demux hack.

Ref #8449

Signed-off-by: Rémi Denis-Courmont <remi@remlab.net>